[package]
name = "post-guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tokio-postgres = {version = "0.7.7", features = ["with-uuid-1", "with-chrono-0_4", "array-impls"]}
postgres-types = { version = "0.2.4", features = ["derive", "array-impls"] }
deadpool-postgres = {version = "0.10.5", features = ["serde"]}
